[gd_scene load_steps=14 format=3 uid="uid://b6qldsxwcjjph"]

[ext_resource type="Script" path="res://scripts/Paper.gd" id="1_rd3t0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6repw"]
size = Vector2(570, 810)

[sub_resource type="Animation" id="Animation_ohb7d"]
resource_name = "Flipping"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1), Vector2(-1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:FrontVisible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.508915, 0.998915),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:BackVisible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.49, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true]
}

[sub_resource type="Animation" id="Animation_7dq1w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:FrontVisible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:BackVisible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b5mkb"]
_data = {
"Flipping": SubResource("Animation_ohb7d"),
"RESET": SubResource("Animation_7dq1w")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_81n07"]
animation = &"Flipping"
play_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_v0y5i"]
animation = &"Flipping"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7xmsb"]
animation = &"RESET"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ar8pl"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sc0a5"]
advance_mode = 2
advance_condition = &"Flip"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fg64k"]
switch_mode = 2
advance_mode = 2
advance_condition = &"Flip Back"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_41il8"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_qyf2q"]
states/Flipping/node = SubResource("AnimationNodeAnimation_v0y5i")
states/Flipping/position = Vector2(471.457, 48.6667)
"states/Flipping Back/node" = SubResource("AnimationNodeAnimation_81n07")
"states/Flipping Back/position" = Vector2(471.556, 151.333)
states/RESET/node = SubResource("AnimationNodeAnimation_7xmsb")
states/RESET/position = Vector2(322.667, 99.7778)
transitions = ["Start", "RESET", SubResource("AnimationNodeStateMachineTransition_ar8pl"), "RESET", "Flipping", SubResource("AnimationNodeStateMachineTransition_sc0a5"), "Flipping", "Flipping Back", SubResource("AnimationNodeStateMachineTransition_fg64k"), "Flipping Back", "RESET", SubResource("AnimationNodeStateMachineTransition_41il8")]

[node name="Area2D" type="Area2D"]
script = ExtResource("1_rd3t0")
BackVisible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_6repw")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-50, -50, 100, 100)

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -405.0
offset_right = 285.0
offset_bottom = 405.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(285, 405)
mouse_filter = 1
button_mask = 3
ignore_texture_size = true
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_b5mkb")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_qyf2q")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/Flip = false
"parameters/conditions/Flip Back" = false

[connection signal="mouse_shape_entered" from="." to="." method="_on_mouse_shape_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_texture_button_button_up"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
